--- a/en/code/tcc-rockstar/project_config.yml
+++ b/en/code/tcc-rockstar/project_config.yml
@@ -1,4 +1,4 @@
-name: 'The Computing Curriculum - Rockstar Activity 🎸'
+name: 'The Computing Curriculum - Rockstar Activity'
 identifier: 'tcc-rockstar'
 type: 'html'
 build: true
